# ChangeLog for net-proxy/dante
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.58 2011/08/02 03:01:10 jer Exp $

*dante-1.3.1-r1 (02 Aug 2011)

  02 Aug 2011; Jeroen Roovers <jer@gentoo.org> +dante-1.3.1-r1.ebuild,
  +files/dante-1.3.1-flags.patch:
  Respect CFLAGS thanks to Agostino Sarubbo (bug #377353).

*dante-1.3.1 (26 Jun 2011)

  26 Jun 2011; Tim Harder <radhermit@gentoo.org> +dante-1.3.1.ebuild:
  Version bump.

*dante-1.3.0 (15 Jun 2011)

  15 Jun 2011; Tim Harder <radhermit@gentoo.org> +dante-1.3.0.ebuild,
  +files/dante-1.3.0-socksify.patch:
  Version bump.

*dante-1.2.3 (07 Jun 2011)

  07 Jun 2011; Tim Harder <radhermit@gentoo.org> +dante-1.2.3.ebuild,
  +files/dante-1.2.3-socksify.patch:
  Version bump (bug #310255). Update to EAPI 4 and add kerberos and static-libs
  USE flags.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> dante-1.1.19-r4.ebuild:
  Remove virtual/libc

  20 Jun 2009; Alin Năstac <mrness@gentoo.org> -dante-1.1.19-r1.ebuild:
  Remove obsolete revision (#260597).

  27 Mar 2009; Jeroen Roovers <jer@gentoo.org> dante-1.1.19-r4.ebuild:
  Stable for HPPA (bug #260597).

  18 Mar 2009; Brent Baude <ranger@gentoo.org> dante-1.1.19-r4.ebuild:
  stable ppc, bug 260597

  15 Mar 2009; Brent Baude <ranger@gentoo.org> dante-1.1.19-r4.ebuild:
  stable ppc64, bug 260597

  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> dante-1.1.19-r4.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #260597

  08 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  dante-1.1.19-r4.ebuild:
  Stable on alpha, bug #260597

  08 Mar 2009; Markus Meier <maekke@gentoo.org> dante-1.1.19-r4.ebuild:
  amd64/x86 stable, bug #260597

  06 Mar 2009; Alin Năstac <mrness@gentoo.org>
  files/dante-1.1.19-libpam.patch:
  Remove stupid env variable tests from configure.ac (#260618).

*dante-1.1.19-r4 (05 Mar 2009)

  05 Mar 2009; Alin Năstac <mrness@gentoo.org> files/dante-sockd-init,