@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX dante-1.1.19-libpam.patch 2688 RMD160 120d53814c7d9b51cad038ffd08e8794eb50b8dc SHA1 11f4807397c0e8a32ac3c55253f481f66e2344d5 SHA256 e78503cc9ece8347cfe0f11d77e0952bec9e2286dd1bea0916540f489d86ab54
 AUX dante-1.1.19-socksify.patch 811 RMD160 4edaad9e92f2ab689cf10b3decd2aa02d24d1f62 SHA1 d6e7ff6699691de9ee2ff836203e5628146ede06 SHA256 2e39a9cb13ae30eaf4129583dbd28d6df08133564aa679b81b5feb21532822d5
@@ -16,17 +16,23 @@ DIST dante-1.1.19.tar.gz 895713 RMD160 3649207b061b95fdd5b0950ea1ece9219eb8af4c 
 DIST dante-1.2.3.tar.gz 978836 RMD160 8bfbd70b5729df14c35d5560b2dd7148c14d1759 SHA1 a2077b0ec061b247d95d15d77af5aa49a1c7d3e8 SHA256 c980a6e7192b38a77af016bc7c5112af7a3459f428c32cbe2920a2163553028d
 DIST dante-1.3.0.tar.gz 942083 RMD160 915bd18b1715cc399276f78ecc8b28e22c3854b6 SHA1 18628362d7c93b01c4289a0245fcd456194891b7 SHA256 75aea0b3b5abe96412b5c5ef78c9a2fe810029d015ac9136020bec1f3df5a776
 DIST dante-1.3.1.tar.gz 943704 RMD160 4a2f39c7b5290a33df2bfcdc94a891b40062171d SHA1 addf834d99779a8d73624638cbb5171aafb7a078 SHA256 da75c1f8506f06c463d51031baa2cf4b612c42dfd9c39e78d6ae37829d4129bd
+DIST dante-1.3.2.tar.gz 949049 RMD160 600bf1cda8795c9ba313bf89b491223ee592820a SHA1 92c559fcdee5523a4e7289d50f003eb88564d1c6 SHA256 6b736f32ec58b899c24cf14be02491a0631a778e385314370d5dea4baf482efb
 EBUILD dante-1.1.19-r4.ebuild 2308 RMD160 3ccc61d4d022e00eab72dcd7572f37fd2d27056d SHA1 dd89d0cae1d51ef61314a5f94efb896ec16ec803 SHA256 78717342b7fdff78b26a30e0e33a5767dfc8dad0a5fa52b9765b83947454f6f5
 EBUILD dante-1.2.3.ebuild 1981 RMD160 da3e464f3e759a157600b4a6a6eb0a6e31d7a3f6 SHA1 282cbc0af30ca09e355244e6c1aec485d492dddf SHA256 9fe0934a30046363b64b9ad884b6a78aeb7b57dfa84c8e7cd6dfc2500076fbd6
 EBUILD dante-1.3.0.ebuild 1976 RMD160 e2630d324dfc0318f77b7e5100732992de372c3d SHA1 ca75cb8c36cd7a20669a9504db6d5259b1b3a483 SHA256 b5f0aed87d4948f2d0b02ad1df1c639b1a4c09f15bd0766b98399c69165e9be3
 EBUILD dante-1.3.1-r1.ebuild 2062 RMD160 a637de275facb5d6b8ed2ecf68dcd4a9a43af104 SHA1 3cdd49dbb0d5cca5540203caaf804d79a4d05eb1 SHA256 5d1ee717efc2641a73d3f68fa7c3007273429c0c2e5bb9df07bfa32fe9bfdb7c
 EBUILD dante-1.3.1.ebuild 1983 RMD160 4a9eae975b2ae8ac4d4e2aa6b18882e129d113bb SHA1 99db084777cd552e710ba655162ce89f3155388c SHA256 2e8a5eaec3d13a96009e43d3c84b742461442ff7880c057c666701efb506850d
-MISC ChangeLog 15199 RMD160 6e32f45e629b70f953a2b06e02453d77be194317 SHA1 57b10abd109d7c0b21807000cd10a115600d34e7 SHA256 ef0c2b57a96b46ada1df85aebfce0ab2c67e6e9290f9a2d890f04bdaef635744
+EBUILD dante-1.3.2.ebuild 2065 RMD160 6c690126d3f7475cc2a606a4269b18c74189b340 SHA1 31f8f88109698c8afa12dfe16156a2788676de64 SHA256 629c822f45008e3669aaa02b23d93965ba3fae29cac35b85780940e1b8152065
+MISC ChangeLog 15320 RMD160 41f6946ab6c1dd569a5ef939c012edb4ec2def1b SHA1 63d6d70109af163f60e8e7b6ac5b193df978be66 SHA256 ccc064faa3ac00c65fc25dccdc181ed2c9940a23fab0584e408d63c0e449df47
 MISC metadata.xml 246 RMD160 bf022485cb8a0289c3151fc974670fd86687d6be SHA1 c68b5b8a31dc103b0e7e8503671910b8bbe419d8 SHA256 7302ea59a7112d51c6936fa5aa83204412d7391441c729a54de3651b81c35add
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk43aHwACgkQVWmRsqeSphPwPgCeINUEBVEKt6+b+IjB2FnA6+TW
-uz4Anj3ArZAqhy8mwDaNoTbHPMbUr2gy
-=Ak+s
+iQEcBAEBCgAGBQJOOsnRAAoJEEqz6FtPBkyj2o8H/jZ3p0G8Q+Zoo+IPE1kfM6rU
+QWgqoOxaE1sqfqa1UQouBJW+LA3BRfA89GLC9YI2r2E0wT7u6Mh030DxbMHgo5yI
+56rzZGO/alK4NmzltvyiWbabolYm7oOXGh0/yUpm85MUbXn0lkPtcG/mpR8PHgCs
+vRyfq2T9b4QHFF0g/UdjAjNlOkv/gTvlxjBGB9SFgEiqy+pWoBIKxK2N4o6UhYas
+xz5X9v9mu3oAlm8UX/6KDdxFT5ZIDUOfOVJJHW2BVv1vaLd4AR43dNGbWodiDHRF
+nwyix1lXh1ztyJmg9U7A4VJY2sEUw2UmTKLrz7Rrc3Gt+B3z753ae1rbNTvF2s4=
+=wmG+
 -----END PGP SIGNATURE-----
